made clarifying changes to info paragraph

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
         <div id="left-margin"></div>
         
-        <div id="main-content">
+        <div id="main-home-content">
             <div id="main-selections">
                 <a href="subpage-1.html">
                     <img src="https://via.placeholder.com/300" id="in-progress">
@@ -75,11 +75,11 @@
                 Christian's Guitar
             </h1>
             <p>
-                Welcome! I'm so exctied you were able to find my website! Here you'll find 
+                Welcome! We're so exctied you were able to find our website! Here you'll find 
                 everything you need to get yourself up and running to be a great guitar player. 
                 You'll learn skills and techniques to give you the confidence to play whatever 
                 music your heart yearns for. You may even be able to write the music you hear 
-                in your heart. I hope you have a kind and enjoyable journey. Good luck!
+                in your heart. We hope you have a kind and enjoyable journey. Good luck!
             </p>
         </div>
 
