--- a/guides.html
+++ b/guides.html
@@ -31,13 +31,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="subpage-1.html">
-                        Subpage 1
-                    </a>
-                </li>
-                <li>
-                    <a href="subpage-2.html">
-                        Subpage 2
+                    <a href="guides.html">
+                        Guides
                     </a>
                 </li>
                 <li>
