added main style guide content w/ css (should have been on dev channel)

--- a/style-guide.html
+++ b/style-guide.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="Christian Viazzo">
+    <meta name="keywords" content="Site, Planning, Style, Guide, WDD 130, Web Fundamentals, Courses, Material, Projects, Assignments, CIT, BYUI">
+    <meta name="description" content="This is the style guide for Christian's Guitar.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Style Guide</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style-guide.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -31,13 +35,8 @@
                     </a>
                 </li>
                 <li>
-                    <a href="subpage-1.html">
-                        Subpage 1
-                    </a>
-                </li>
-                <li>
-                    <a href="subpage-2.html">
-                        Subpage 2
+                    <a href="guides.html">
+                        Guides
                     </a>
                 </li>
                 <li>
@@ -54,7 +53,129 @@
         <div id="left-margin"></div>
 
         <div id="style-guide-content">
-
+            <h1>Final Project Style Guide</h1>
+            <div>
+                <h2>Normal Colors</h2>
+                <div class="color-wrapper">
+                    <div class="title">
+                        Background
+                    </div>
+                    <div class="color"></div>
+                    <div>
+                        #value
+                    </div>
+                </div>
+                <div class="color-wrapper">
+                    <div class="title">
+                        Alt Background
+                    </div>
+                    <div class="color"></div>
+                    <div>
+                        #value
+                    </div>
+                </div>
+                <div class="color-wrapper">
+                    <div class="title">
+                        Primary
+                    </div>
+                    <div class="color"></div>
+                    <div>
+                        #value
+                    </div>
+                </div>
+                <div class="color-wrapper">
+                    <div class="title">
+                        Alt Primary
+                    </div>
+                    <div class="color"></div>
+                    <div>
+                        #value
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h2>Dark Mode Colors</h2>
+                <div class="color-wrapper">
+                    <div class="title">
+                        Background
+                    </div>
+                    <div class="color"></div>
+                    <div>
+                        #value
+                    </div>
+                </div>
+                <div class="color-wrapper">
+                    <div class="title">
+                        Alt Background
+                    </div>
+                    <div class="color"></div>
+                    <div>
+                        #value
+                    </div>
+                </div>
+                <div class="color-wrapper">
+                    <div class="title">
+                        Primary
+                    </div>
+                    <div class="color"></div>
+                    <div>
+                        #value
+                    </div>
+                </div>
+                <div class="color-wrapper">
+                    <div class="title">
+                        Alt Primary
+                    </div>
+                    <div class="color"></div>
+                    <div>
+                        #value
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h2>Fonts</h2>
+                <p>
+                    I have chosen to use the following fonts for my site:
+                </p>
+                <ul>
+                    <li>
+                        Roboto Slab: Used for headlines.
+                    </li>
+                    <li>
+                        Inter: Used for the primary font.
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h2>Elevator Pitch</h2>
+                <p>
+                    Please replace this text with your Elevator Pitch.
+                </p>
+            </div>
+            <div>
+                <h2>Purpose Statement</h2>
+                <p>
+                    Please replace this text with your Purpose Statement.
+                </p>
+            </div>
+            <div>
+                <h2>Audience Statement</h2>
+                <p>
+                    Please replace this text with your Audience Statement.
+                </p>
+            </div>
+            <div>
+                <h2>Misson Statement</h2>
+                <p>
+                    Please replace this text with your Misson Statement.
+                </p>
+            </div>
+            <div>
+                <h2>Persona and Scenario Ideas</h2>
+                <p>
+                    Please replace this text with your ideas. Use multiple paragraph tags as needed.
+                </p>
+            </div>
         </div>
 
         <div id="right-margin"></div>
