added a styling id to the textarea in the table

--- a/contact-us.html
+++ b/contact-us.html
@@ -97,7 +97,7 @@
                 </label>
                 <label>
                     Message:
-                    <textarea name="message" placeholder="Message"></textarea>
+                    <textarea name="message" placeholder="Message" id="message-text"></textarea>
                 </label>
                 <input type="submit" value="Send Message" id="contact-form-submit">
                 <div id="contact-form-message"></div>
