--- a/guides.html
+++ b/guides.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subpage 1</title>
+    <title>Lesson Guides</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -48,8 +48,94 @@
     <main>
         <div id="left-margin"></div>
 
-        <div id="subpage-1-content">
-            
+        <div id="guides-content">
+            <h1>Lesson Guides</h1>
+
+
+            <p>We have worked hard to create guides that will help you craft your skills farther
+                than before. 
+            </p>
+
+            <p>At the start of each guide you will be given a general overview of the material that
+                will be covered and the objectives we hope to help you reach by the end of the lesson.
+                We want you to be as prepared as possible before starting so you know what you're
+                getting into.
+            </p>
+
+
+            <table>
+                <tr>
+                    <th><h2>Lesson</h2></th>
+                    <th><h2>Concept</h2></th>
+                </tr>
+                <tr>
+                    <td><p></p></td>
+                </tr>
+                <tr>
+                    <td rowspan="4"><a href="lesson-1.html">Lesson 1:<br></a>What is a guitar?</td>
+                    <td class="table-col-2">Concept #1: The parts</td>    
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #2: The types</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #3: The sound</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #4: Maintenance</td>
+                </tr>
+                <tr>
+                    <td class="lesson-separator"><p></p></td>
+                    <td class="lesson-separator"><p></p></td>
+                </tr>
+                <tr>
+                    <td><p></p></td>
+                </tr>
+                <tr>
+                    <td rowspan="5">(Unavailable)<br>Lesson 2</td>
+                    <td class="table-col-2">Concept #1</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #2</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #3</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #4</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #5</td>
+                </tr>
+                <tr>
+                    <td class="lesson-separator"><p></p></td>
+                    <td class="lesson-separator"><p></p></td>
+                </tr>
+                <tr>
+                    <td><p></p></td>
+                </tr>
+                <tr>
+                    <td rowspan="5">(Unavailable)<br>Lesson 3</td>
+                    <td class="table-col-2">Concept #1</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #2</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #3</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #4</td>
+                </tr>
+                <tr>
+                    <td class="table-col-2">Concept #5</td>
+                </tr>
+                <tr>
+                    <td><p></p></td>
+                </tr>
+            </table>
+
+
         </div>
 
         <div id="right-margin"></div>
