fixed links for selection images

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         
         <div id="main-home-content">
             <div id="main-selections">
-                <a href="subpage-1.html">
+                <a href="guides.html">
                     <img src="https://via.placeholder.com/300" id="in-progress">
                 </a>
-                <a href="subpage-1.html">
+                <a href="guides.html">
                     <img src="https://via.placeholder.com/300" id="new-guides">
                 </a>
-                <a href="subpage-2.html">
+                <a href="blog.html">
                     <img src="https://via.placeholder.com/300" id="blog">
                 </a>
             </div>
