added button with link to lesson

--- a/guides.html
+++ b/guides.html
@@ -72,17 +72,19 @@
                     <td><p></p></td>
                 </tr>
                 <tr>
-                    <td rowspan="4"><a href="lesson-1.html">Lesson 1:<br></a>What is a guitar?</td>
-                    <td class="table-col-2">Concept #1: The parts</td>    
+                    <td rowspan="4">
+                        <a href="lesson-1.html" id="lesson-button">Lesson 1:<br>What Is a Guitar?</a>
+                    </td>
+                    <td class="table-col-2">Concept 1 - The Parts</td>    
                 </tr>
                 <tr>
-                    <td class="table-col-2">Concept #2: The types</td>
+                    <td class="table-col-2">Concept 2 - The Types</td>
                 </tr>
                 <tr>
-                    <td class="table-col-2">Concept #3: The sound</td>
+                    <td class="table-col-2">Concept 3 - The Sound</td>
                 </tr>
                 <tr>
-                    <td class="table-col-2">Concept #4: Maintenance</td>
+                    <td class="table-col-2">Concept 4 - Maintenance</td>
                 </tr>
                 <tr>
                     <td class="lesson-separator"><p></p></td>
