changed anchor reference for added images

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <div id="main-home-content">
             <div id="main-selections">
                 <a href="guides.html">
-                    <img src="https://via.placeholder.com/300" id="in-progress">
+                    <img src="assets/home/working-on.png" id="in-progress">
                 </a>
                 <a href="guides.html">
-                    <img src="https://via.placeholder.com/300" id="new-guides">
+                    <img src="assets/home/new-guides.png" id="new-guides">
                 </a>
                 <a href="blog.html">
-                    <img src="https://via.placeholder.com/300" id="blog">
+                    <img src="assets/home/blog.png" id="blog">
                 </a>
             </div>
             <h1>
