added main content of the page

--- a/lesson-1.html
+++ b/lesson-1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Subpage 2</title>
+    <title>Lesson 1 - What Is a Guitar?</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -46,10 +46,139 @@
     </header>
 
     <main>
-        <div id="left-margin"></div>
+        <div id="left-margin-lesson-1">
+            <div id="lesson-menu">
+                <table>
+                    <tr>
+                        <th>
+                            <a href="lesson-1.html" class="side-panel-lesson-button">Lesson 1:<br>What is a Guitar?</a>
+                        </th>
+                    </tr>
+                    <tr>
+                        <td><p></p></td>
+                    </tr>
+                    <tr>
+                        <td>C1 - The Parts</td>
+                    </tr>
+                    <tr>
+                        <td>C2 - The Types</td>
+                    </tr>
+                    <tr>
+                        <td>C3 - The Sound</td>
+                    </tr>
+                    <tr>
+                        <td>C4 - Maintainance</td>
+                    </tr>
+                    <tr>
+                        <td><p></p></td>
+                    </tr>
+                    <tr>
+                        <th>Lesson 2:<br>(Unavailable)</th>
+                    </tr>
+                    <tr>
+                        <td><p></p></td>
+                    </tr>
+                    <tr>
+                        <td>C1 - None</td>
+                    </tr>
+                    <tr>
+                        <td>C2 - None</td>
+                    </tr>
+                    <tr>
+                        <td>C3 - None</td>
+                    </tr>
+                    <tr>
+                        <td>C4 - None</td>
+                    </tr>
+                    <tr>
+                        <td>C5 - None</td>
+                    </tr>
+                    <tr>
+                        <td><p></p></td>
+                    </tr>
+                    <tr>
+                        <th>Lesson 3:<br>(Unavailable)</th>
+                    </tr>
+                    <tr>
+                        <td><p></p></td>
+                    </tr>
+                    <tr>
+                        <td>C1 - None</td>
+                    </tr>
+                    <tr>
+                        <td>C2 - None</td>
+                    </tr>
+                    <tr>
+                        <td>C3 - None</td>
+                    </tr>
+                    <tr>
+                        <td>C4 - None</td>
+                    </tr>
+                    <tr>
+                        <td>C5 - None</td>
+                    </tr>
+                    <tr>
+                        <td><p></p></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
 
-        <div id="subpage-2-content">
+        <div id="lesson-1-content">
+            <h1>Lesson 1: What Is a Guitar?</h1>
 
+            <img src="assets/lesson-1/lesson-1-banner.png" id="lesson-1-banner">
+
+            <h2>Overview</h2>
+            <p class="lesson-info">
+                This is your first guide! Awesome! To get you situated, we usually
+                have an overview that explains a quick summary of the topic we want
+                to go over with you followed by some of the objectives we want you
+                to have as you learn. Learning with a goal in mind is a powerful
+                thing! At the bottom of the page you'll find links to the separate
+                concept pages to help you reach the objectives and accomplish your
+                goals. We recommend that you go through them in order, but if there
+                is something in specific you're looking for go ahead at whatever order
+                you wish. All we ask is that you feel comfortable with all the objectives
+                before you move on to the next lesson.<br><br>
+                
+                So what is a guitar anyway? Some may say a wooden box with strings.
+                Others would say a vehicle to another world. Which is it? We don't
+                think that there's a one size fits all answer to that question, but
+                we do believe in understanding principles. We want you to understand
+                these princples before we even begin plucking strings and strumming
+                chords.
+            </p>
+            <br>
+            <h2>Objectives</h2>
+            <p class="lesson-info">
+                The princples that we want to explore the parts of the guitar, the types
+                of guitars there are, the terms used to describe the sound of the guitar,
+                and, probably most important, how to maintain your instrument. To make
+                less vague, we'll brake it down into goals, or objectives, below: 
+            </p>
+            <p id="lesson-1-objectives">    
+                -Be able to identify major parts of a guitar<br>
+                -Know the differnces between popular types of guitars<br>
+                -Understand how each type of popular guitar creates it's sound<br>
+                -Be comfortable with musical terms to describe sound<br>
+                -Know how to take care of and protect your instrument
+            </p>
+
+            <table>
+                <tr>
+                    <td class="bordered">Concept 1<br>- The Parts -</td>
+                    <td>Concept 3<br>- The Sound -</td>
+                </tr>
+                <tr>
+                    <td class="bordered"><p></p></td>
+                    <td><p></p></td>
+                </tr>
+                <tr>
+                    <td class="bordered">Concept 2<br>- The Types -</td>
+                    <td>Concept 4<br>- Maintainance -</td>
+                </tr>
+            </table>
         </div>
 
         <div id="right-margin"></div>
