added content in the text fields

--- a/style-guide.html
+++ b/style-guide.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="color"></div>
                     <div>
-                        #value
+                        #F0F4EF
                     </div>
                 </div>
                 <div class="color-wrapper">
@@ -71,7 +71,7 @@
                     </div>
                     <div class="color"></div>
                     <div>
-                        #value
+                        #b4cded
                     </div>
                 </div>
                 <div class="color-wrapper">
@@ -80,7 +80,7 @@
                     </div>
                     <div class="color"></div>
                     <div>
-                        #value
+                        #0D1821
                     </div>
                 </div>
                 <div class="color-wrapper">
@@ -89,7 +89,7 @@
                     </div>
                     <div class="color"></div>
                     <div>
-                        #value
+                        #344966
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                     </div>
                     <div class="color"></div>
                     <div>
-                        #value
+                        #0D1821
                     </div>
                 </div>
                 <div class="color-wrapper">
@@ -110,7 +110,7 @@
                     </div>
                     <div class="color"></div>
                     <div>
-                        #value
+                        #344966
                     </div>
                 </div>
                 <div class="color-wrapper">
@@ -119,7 +119,7 @@
                     </div>
                     <div class="color"></div>
                     <div>
-                        #value
+                        #F0F4EF
                     </div>
                 </div>
                 <div class="color-wrapper">
@@ -128,7 +128,7 @@
                     </div>
                     <div class="color"></div>
                     <div>
-                        #value
+                        #d1cbcb
                     </div>
                 </div>
             </div>
@@ -149,31 +149,118 @@
             <div>
                 <h2>Elevator Pitch</h2>
                 <p>
-                    Please replace this text with your Elevator Pitch.
+                    Have you ever watched someone playing the guitar and thought to yourself, 
+                    “Wow, I wish I could do something cool like that.”? What if I told you 
+                    you could? I’ve been playing and practicing guitar for over 10 years now 
+                    and have started to feel like it’s time to share what I’ve learned. I 
+                    can help you learn the basics and give you enough structure in your 
+                    practice that you’ll propel your learning fast. You might be able to 
+                    learn everything on your own, but with me, you won’t have to waste 
+                    your time searching for the next step. Check out my website to learn more.
                 </p>
             </div>
             <div>
                 <h2>Purpose Statement</h2>
                 <p>
-                    Please replace this text with your Purpose Statement.
+                    I’m Christian and I love playing the guitar. It’s my passion and it’s 
+                    something that I want to share. I remember when I first started learning. 
+                    I didn’t have the money to pay for formal lessons and I had no clue what 
+                    I needed to learn to get better or where to find it. My website would be 
+                    a place for me to share what I have learned in an organized way so 
+                    newcomers and beginners to guitar can spend less time wandering and more 
+                    time practicing. I would provide material and techniques that will help 
+                    people become better guitar players. 
                 </p>
             </div>
             <div>
                 <h2>Audience Statement</h2>
                 <p>
-                    Please replace this text with your Audience Statement.
+                    I wish to help all those who are interested in learning the guitar, but 
+                    have never felt like they had the resources or the know how to learn on 
+                    their own. I want to keep everything free in order to help as many 
+                    people as possible. You never know who could become the next Eric 
+                    Clapton or Joe Bonamassa after all. I expect many of the visitors to 
+                    the website to be a younger audience between the ages of 13-18. With 
+                    that in mind, I expect the majority of the devices accessing the site 
+                    to be laptops or smart phones. Creating an accessible mobile user 
+                    experience will be necessary.
                 </p>
             </div>
             <div>
                 <h2>Misson Statement</h2>
                 <p>
-                    Please replace this text with your Misson Statement.
+                    I, Christian Viazzo, believe that each person with the desire to learn 
+                    the guitar should have the experience of doing so with confidence and 
+                    consistency. That is why I am providing a streamlined guide of the 
+                    things that have helped me improve over the years. The goal in doing 
+                    this is to make powerful and productive learning material that is as 
+                    accessible to as many people as possible. The principles that I will 
+                    teach, pulled from current popular music, will provide confidence and 
+                    relevance to those who want to show off their new skills. Expect to 
+                    stretch and grow as you explore the guitar.
                 </p>
             </div>
             <div>
                 <h2>Persona and Scenario Ideas</h2>
                 <p>
-                    Please replace this text with your ideas. Use multiple paragraph tags as needed.
+                    Name: Luke
+                    <br>
+                    Age: 16
+                    <br>
+                    Motivation: To learn how to write better music.
+                    <br>
+                    Goal: To get a better understanding of how music is structured and how
+                    to use that in my guitar practicing.
+                    <br>
+                    Technological Proficiency: Capable
+                    <br><br>
+                    Background: As a guitar player, I want to be able to understand how the
+                    music I play works because I feel like it will help me write my own
+                    music better.
+                    <br><br>
+                    Scenario: Luke gets on the website because he doesn’t quite understand 
+                    the concept of music being used in a song he’s learning, but he knows 
+                    the term for the concept being used. Our website should have a tab for 
+                    common concepts covered by the guides and tutorials. When Luke clicks 
+                    on the tab it opens to a list. He sees the term he’s looking for and 
+                    it opens up a list of guides and tutorials where that concept is 
+                    covered. At this point Luke has options to choose from. From these 
+                    options he’ll be able to see how the same concept is used in different 
+                    scenarios.
+                </p>
+                <br>
+                <p>
+                    Name: Michela
+                    <br>
+                    Age: 19
+                    <br>
+                    Motivation: To learn how to play the guitar and write songs better.
+                    <br>
+                    Goal: To be able to learn quickly and clearly and not waste time.
+                    <br>
+                    Technological Proficiency: Capable
+                    <br><br>
+                    Background: As a student, I don’t have a lot of time to look around 
+                    for disconnected parts or guides to learn how to play the guitar, 
+                    so I would really appreciate a place where I could find everything 
+                    in one place.
+                    <br><br>
+                    Scenario: Michela gets on the website because she finally has some 
+                    free time after studying all day. She only has 30 minutes to an hour 
+                    so she needs to get going quickly. She has been on the website before 
+                    and wants to start where she left off last time she visited. There 
+                    should be a tab to continue a guide that was previously opened to get 
+                    to it quickly otherwise in the list of guides there should be check 
+                    marks next to guides that have been completed. For technicalities, 
+                    this can either be tracked by a user account registered with the 
+                    website or through cookies. Upon clicking on this, Michela should be 
+                    taken directly to the guide she was working on before as fast as she 
+                    can. In case she needs a refresher on previously learned material, 
+                    there should be a list in the margin to show previously completed and 
+                    currently working on guides that Michela would be able to easily 
+                    click on and access. It may be good to include a save or bookmark 
+                    function somewhere obvious to better categorize where Michela leaves 
+                    off when she needs to leave.
                 </p>
             </div>
         </div>
