added meta tags to each page

--- a/contact-us.html
+++ b/contact-us.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="Christian Viazzo">
+    <meta name="keywords" content="Site, Planning, WDD 130, Web Fundamentals, Courses, Material, Projects, Assignments, CIT, BYUI, Guitar, Music, Lessons">
+    <meta name="description" content="This is the contact us page for Christian's Guitar.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
     <link rel="stylesheet" href="css/normalize.css">
